--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,8 +2,8 @@ name: Update README SVG
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 매일 오전 9시 (UTC+9 기준)
-  workflow_dispatch:  # 수동 실행 가능
+    - cron: '0 0 * * *'  # 매일 오전 9시 (UTC+9)
+  workflow_dispatch:  # 수동 실행
   push:
     branches: [ main ]  # 푸시할 때도 업데이트
 
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     
     permissions:
-      contents: write  # 파일 수정 권한
+      contents: write  # 권한
       
     steps:
       - name: Checkout repository
@@ -41,6 +41,6 @@ jobs:
           if git diff --staged --quiet; then
             echo "변경사항이 없습니다."
           else
-            git commit -m "🌤️ $(date +'%Y-%m-%d') 날씨 업데이트"
+            git commit -m "🌤️ $(date +'%Y-%m-%d') 날씨 업데이트 ㅋㅋ"
             git push
           fi
